<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#FFfcfcfc"
	android:orientation="vertical"
	android:padding="10dip">
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ttlogo"
		android:contentDescription="@string/descriptionss" />
   	
   	<TextView 
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="15dip"
   	    android:background="@drawable/white_table_bg"
   	    android:textSize="15sp"
   	    android:textColor="#FF333333"
   	    android:id="@+id/txtTopDesc" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dip"
		android:orientation="horizontal"
		android:gravity="center_vertical">

		<TextView
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="5"
			android:layout_marginRight="15dip"
			style="@style/txt_title_style"
			android:text="@string/country"
			android:id="@+id/txtCountryText"
			android:layout_marginEnd="15dip" />

		<TextView
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="6"
			android:background="@drawable/dropdownlist"
			style="@style/txt_cont_style"
			android:id="@+id/txtCountrySel" />
	</LinearLayout>


   	<LinearLayout 
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="20dip"
   	    android:orientation="horizontal"
   	    android:gravity="center_vertical">
   	    
   	    	<TextView 
   	    	    android:layout_width="0dip"
   	    	    android:layout_height="wrap_content"
   	    	    android:layout_weight="5"
   	    	    android:layout_marginRight="15dip"
   	    	    style="@style/txt_title_style"
   	    	    android:text="@string/city"
				android:id="@+id/txtCityText"
				android:layout_marginEnd="15dip" />
   	    	
   	    	<TextView 
   	    	    android:layout_width="0dip"
   	    	    android:layout_height="wrap_content"
   	    	    android:layout_weight="6"
   	    	    android:background="@drawable/dropdownlist"
   	    	    style="@style/txt_cont_style"
   	    	    android:id="@+id/txtCitySel" />
   	</LinearLayout>
   	
   	<LinearLayout 
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="10dip"
   	    android:orientation="horizontal"
   	    android:gravity="center_vertical">
   	    
   	    	<TextView 
   	    	    android:layout_width="0dip"
   	    	    android:layout_height="wrap_content"
   	    	    android:layout_weight="5"
   	    	    android:layout_marginRight="15dip"
   	    	    style="@style/txt_title_style"
   	    	    android:text="@string/date"
				android:layout_marginEnd="15dip" />
   	    	
   	    	<TextView 
   	    	    android:layout_width="0dip"
   	    	    android:layout_height="wrap_content"
   	    	    android:layout_weight="6"
   	    	    android:background="@drawable/dropdownlist"
   	    	    style="@style/txt_cont_style"
   	    	    android:id="@+id/txtDateSel" />
   	</LinearLayout>
   	
   	<LinearLayout 
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="10dip"
   	    android:orientation="horizontal"
   	    android:gravity="center_vertical">
   	    
   	    	<TextView 
   	    	    android:layout_width="0dip"
   	    	    android:layout_height="wrap_content"
   	    	    android:layout_weight="5"
   	    	    android:layout_marginRight="15dip"
   	    	    style="@style/txt_title_style"
   	    	    android:text="@string/period"
				android:layout_marginEnd="15dip" />
   	    	
   	    	<TextView 
   	    	    android:layout_width="0dip"
   	    	    android:layout_height="wrap_content"
   	    	    android:layout_weight="6"
   	    	    android:background="@drawable/dropdownlist"
   	    	    style="@style/txt_cont_style" 	    	    
   	    	    android:id="@+id/txtPeriodSel" />
   	</LinearLayout>
   	
   	<LinearLayout 
   	    android:layout_width="fill_parent"
   	    android:layout_height="0dip"
   	    android:layout_weight="1"
   	    android:layout_marginTop="10dip"
   	    android:orientation="vertical">
   	    
   	    	<TextView 
   	    	    android:layout_width="fill_parent"
   	    	    android:layout_height="wrap_content"
   	    	    android:layout_marginTop="5dip"
   	    	    style="@style/txt_title_style"
   	    	    android:text="@string/desc"/>
   	    	
   	    	<EditText 
   	    	    android:layout_width="fill_parent"
   	    	    android:layout_height="fill_parent"
   	    	    android:layout_marginTop="10dip"
   	    	    android:background="@drawable/textfield"
   	    	    android:maxLength="250"
   	    	    android:gravity="left|top"
   	    	    android:textSize="15sp"
   	    	    android:textColor="#FF333333"
   	    	    android:hint="@string/hint"
   	    	    android:id="@+id/edtRecipe"
				android:importantForAutofill="no"
				tools:ignore="RtlHardcoded,TextFields" />
   	</LinearLayout>

	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dip"
        android:paddingBottom="5dip"
        android:orientation="horizontal"
        android:gravity="center_vertical">

            <Button
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dip"
                style="@style/btn_bottom_style"
                android:background="@drawable/btn_black"
                android:text="@string/cancel"
                android:id="@+id/btnCancel"
				android:layout_marginEnd="10dip" />

            <Button
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dip"
                style="@style/btn_bottom_style"
                android:background="@drawable/btn_blue_s"
                android:text="@string/help"
                android:id="@+id/btnHelp"
				android:layout_marginEnd="10dip" />

            <Button
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/btn_bottom_style"
                android:background="@drawable/btn_green"
                android:text="@string/forward"
                android:id="@+id/btnForward" />
    </LinearLayout>

	<DatePicker
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:id="@+id/datepicker"
   	    android:visibility="gone"/>
</LinearLayout>
