<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="300dip"
	android:layout_height="wrap_content"
	android:background="@drawable/popup_bg"
	android:orientation="vertical"
	android:gravity="center_horizontal">
		
		<TextView 
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:background="@drawable/white_table_bg"
    	    android:layout_marginTop="10dip"
			android:textSize="14sp"
			android:textColor="#FF333333"
			android:text="@string/helpstring"
			android:autoLink="web"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_table_bg"
            android:layout_marginTop="3dip"
            android:textSize="12sp"
            android:textColor="#FF333333"
            android:gravity="right"
            android:text="@string/vername"
			tools:ignore="RtlHardcoded" />
		
		<Button 
		    android:layout_width="wrap_content"
			android:minWidth="75dp"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15dip"
		    android:layout_marginBottom="10dip"
			style="@style/btn_bottom_style"
		    android:background="@drawable/btn_blue_s"
		    android:text="@string/ok"
		    android:id="@+id/btnOK"/>
		
</LinearLayout>
