<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#FFfcfcfc"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="0dip"
    android:layout_weight="1.5"
    android:gravity="center"
    android:orientation="vertical"
      tools:ignore="UseCompoundDrawables">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dip"
      android:text="@string/welcome"
      android:textColor="#FF333333"
      android:textSize="24sp"
      android:textStyle="bold" />

    <ImageView
      android:layout_width="180dip"
      android:layout_height="180dip"
      android:background="@drawable/gplayhi"
        android:contentDescription="@string/descriptionss" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="0dip"
    android:layout_weight="1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="20dip">
    <!--<com.facebook.login.widget.LoginButton-->
    <!--android:id="@+id/login_button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_marginBottom="10dip" />-->
    <LinearLayout
      android:id="@+id/layoutFacebookLogin"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dip"
      android:layout_marginLeft="20dip"
      android:layout_marginRight="20dip"
      android:layout_marginTop="10dip"
      android:background="@drawable/btn_blue"
      android:gravity="center_vertical"
      android:orientation="horizontal">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/facebook_icon"
          android:contentDescription="@string/descriptionss" />

      <TextView
        style="@style/btn_white_text_style"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_weight="1"
        android:text="@string/fblogin"
        android:textColor="#ffffffff"
          android:layout_marginStart="15dip" />

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/white_more_icon"
          android:contentDescription="@string/descriptionss" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/layoutGoogleLogin"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dip"
      android:layout_marginLeft="20dip"
      android:layout_marginRight="20dip"
      android:layout_marginTop="10dip"
      android:background="@drawable/btn_brown"
      android:gravity="center_vertical"
      android:orientation="horizontal">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/google_icon"
          android:contentDescription="@string/descriptionss" />

      <TextView
        style="@style/btn_white_text_style"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_weight="1"
        android:text="@string/gologin"
          android:layout_marginStart="15dip" />

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/white_more_icon"
          android:contentDescription="@string/descriptionss" />
    </LinearLayout>
  </LinearLayout>
</LinearLayout>